data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_706.wast
;; 7. Build a loop performing bitwise operations resulting in various zero/non-zero flags, using `br_if` to conditionally branch based on these flags. Check correct handling of zero (false) versus nonzero (true) evaluations, ensuring proper branch decisions.

(assert_invalid
  (module
    (func (result i32)
      (local i32)
      ;; Initialize the local variable to a non-zero value
      (i32.const 5)
      (set_local 0)

      ;; Loop with conditional branch
      (loop (result i32)
        ;; Apply a bitwise AND with 1, resulting in 1 or 0
        (get_local 0)
        (i32.const 1)
        (i32.and)
        ;; Conditional branch if the result is non-zero
        (br_if 1)
        
        ;; Decrement the local variable
        (get_local 0)
        (i32.const 1)
        (i32.sub)
        (tee_local 0)

        ;; Check if the local variable is zero, branch to continue loop if non-zero
        (br_if 0)
        ;; Return zero to signify loop ends
        (i32.const 0)
      )
      ;; If loop exits without branching back, return non-zero
      (i32.const 42)
    )
  )
  "type mismatch"
)